# pagan-ics

./: Cargo.toml  index.html
pkg/: package.json  pagan_holidays_cal_generator.d.ts  pagan_holidays_cal_generator.js  pagan_holidays_cal_generator_bg.wasm  pagan_holidays_cal_generator_bg.wasm.d.ts
src/: lib.rs
